--- a/css/index.css
+++ b/css/index.css
@@ -49,6 +49,7 @@ table {
 
 * {
     box-sizing: border-box;
+    color: white;
 }
 
 html {
@@ -91,6 +92,26 @@ header {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-color: rgb(0, 4, 17, .8); 
+}
+
+.transbox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(0, 4, 17, .8);
+    width: 100%;
+    height: 310px;
+}
+
+i {
+    height: 300px;
+    width: 300px;
+}
+.social {
+    display: flex;
+    justify-content: space-evenly;
+    width: 30vw;
 }
 
 /* spacers */
