--- a/css/menu.css
+++ b/css/menu.css
@@ -49,12 +49,14 @@ table {
 
 * {
     box-sizing: border-box;
+    color: rgb(225, 239, 230);
 }
 
 html {
     max-width: 1920px;
     min-width: 428px;
     font-size: 62.5%;
+    width: 100%;
 }
 
 body {
@@ -98,6 +100,42 @@ header {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    background-color: rgb(0, 4, 17, .8);
+}
+
+.transbox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(0, 4, 17, .8);
+    width: 100%;
+    height: 310px;
+    justify-content: center;
+}
+
+nav {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.nav {
+    width: 100vw;
+    display: flex;
+    justify-content: space-evenly;
+    padding-bottom: 40px;
+}
+
+.social {
+    display: flex;
+    justify-content: space-around;
+    width: 20vw;
+}
+
+img {
+    width: 25vw;
+    padding: 20px;
 }
 
 /* spacer */
