--- a/css/index.css
+++ b/css/index.css
@@ -88,11 +88,11 @@ p, a {
 header {
     width: 100%;
     height: 100vh;
-    background-image: url('../img/home-header.jpg');
+    background-image: url('../img/menu-header.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-color: rgb(0, 4, 17, .8); 
+    background-color: rgb(0, 4, 17, .8);
 }
 
 .transbox {
