--- a/css/menu.css
+++ b/css/menu.css
@@ -113,6 +113,47 @@ header {
     justify-content: center;
 }
 
+.menu-container {
+    display: flex;
+    height:250vh;
+    background-color: rgb(0, 4, 17, .8);
+    width: 100vw;
+    flex-wrap: wrap;
+    justify-content: center;
+    justify-content: space-around;
+}
+
+.topper {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu-section {
+    display: flex;
+    flex-direction: column;
+    width: 35vw;
+    justify-content: flex-start;
+    /* align-items: center; */
+    justify-content: space-evenly;
+}
+
+.menu-item {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+
+.title {
+    width: 80%
+}
+
+.price {
+    align-self: flex-end;
+    width: 20%;
+}
+
 nav {
     display: flex;
     justify-content: center;
@@ -161,6 +202,10 @@ img {
     background-position: center;
     background-repeat: no-repeat;
 }
+
+/* h2 {
+    width: 100%
+} */
 
 /* footer section */
 footer {
