--- a/css/index.css
+++ b/css/index.css
@@ -55,7 +55,7 @@ table {
 html {
     max-width: 1920px;
     min-width: 428px;
-    
+    width: 100vw;
     font-size: 62.5%;
 }
 
@@ -237,8 +237,13 @@ footer {
     height: 20vh;
     font-size: 3rem;
     background-color: rgb(0, 4, 17);
-  
     flex-wrap: wrap;
+}
+
+input {
+    width: 450px;
+    height: 60px;
+    font-size: xx-large;
 }
 
 .end {
@@ -247,13 +252,11 @@ footer {
    height: 150px;
 }
 
-.email {
-width: 600px;
-}
-
 button {
     color: black;
     font-size: xx-large;
+    height:60px;
+    width:170px;
 }
 
 .email {
@@ -261,6 +264,8 @@ button {
     flex-wrap: wrap;
     font-size: 5rem;
     padding-left: 10px;
+    display: flex;
+    justify-content: center;
 }
 
 nav.ftr {
@@ -281,11 +286,40 @@ nav.ftr {
 /* mobile media query */
 @media (max-width: 428px) {
     /* header section */
-    
+    header {
+
+    }
+
+    h1 {
+        font-size: 5.5rem;
+        text-align: center;
+        padding-bottom: 15px;
+    }
+
+    .transbox {
+        height:auto;
+        justify-content: center;
+    }
+
+    .nav {
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 20px;
+    }
+
+    .social {
+        width: 30vw;
+    }
 
     /* gallery section */
     .gallery {
         height: auto;
+    }
+
+    img {
+        width: auto;
+        padding: 0;
+        padding-top: 30px;
     }
     
     /* about us section */
@@ -328,8 +362,44 @@ nav.ftr {
 
     /* footer section */
     footer {
-        height: auto;
+        height: 450px;
         padding-top: 2.5vh;
         font-size: 2rem;
+        flex-direction: column;
+        display: flex;
+    }
+
+    .email {
+        flex-direction: column;
+        width: 100vw;
+        font-size: 3.0rem;
+        align-items: center;
+        padding-left: 0px;
+    }
+
+    .input {
+        width: 400px;
+    }
+
+    button {
+        width: 400px;
+    }
+
+    .copyright {
+        align-self: flex-end;
+        text-align: center;
+        font-size: 2rem;
+    }
+
+    .end {
+        flex-direction: column;
+        display: flex;
+        height: 350px;
+    }
+
+    nav.ftr {
+        width: 100vw;
+        flex-direction: column;
+        padding-top: 40px;
     }
 }
