--- a/css/menu.css
+++ b/css/menu.css
@@ -210,9 +210,49 @@ img {
 /* footer section */
 footer {
     width: 100%;
-    height: 15vh;
-    padding-top: 2.5vh;
+    height: 20vh;
     font-size: 3rem;
+    background-color: rgb(0, 4, 17);
+    flex-wrap: wrap;
+}
+
+.end {
+   width: 100%;
+   display: flex;
+   height: 150px;
+}
+
+.email {
+width: 600px;
+}
+
+button {
+    color: black;
+    font-size: xx-large;
+}
+
+.email {
+    width: 35vw;
+    flex-wrap: wrap;
+    font-size: 5rem;
+    padding-left: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+nav.ftr {
+    width:65vw;
+    flex-direction: row;
+    display: flex;
+    justify-content: space-evenly;
+    height: 150px;
+    align-items: center;
+}
+
+.copyright {
+    font-size: 2.5rem;
+    justify-content: flex-end;
+    display:flex;
 }
 
 /* mobile media query */
