--- a/css/index.css
+++ b/css/index.css
@@ -173,7 +173,7 @@ nav {
     justify-content: center;
     align-items: center;
     background-color: rgb(0, 4, 17, .8);
-    /* padding-top: 90px; */
+    padding-top: 90px;
 }
 
 .about h2 {
@@ -331,6 +331,10 @@ nav.ftr {
     .about h2 {
         width: 100%;
         padding-top: 5vh;
+    }
+
+    .about-container {
+        padding-top: 0px;
     }
     
     .about-container .text {
